<resources>
    <string name="app_name">Harray Potter App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hogwarts</string>
    <string name="nav_header_subtitle">Segunda-Feira, 04/07/2022</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="defaultQueryHint">Nome</string>
    <string name="simbolo_favorito">Pessoa classificada como favorita</string>
    <string name="menu_home">Hogwarts</string>
    <string name="menu_gallery">Gryffindor</string>
    <string name="menu_slideshow">Ravenclaw</string>
    <string name="menu_lufalufa">Hufflepuff</string>
    <string name="menu_sonserina">Slytherin</string>
    <string name="go_back">Voltar</string>
    <string name="add">Adicionar como favorito</string>
    <string name="oficio">Oficio</string>
    <string name="dataNascimento">Data de nascimento</string>
    <string name="genero">Genero</string>
    <string name="membrerName">Nome do membro da casa</string>
    <string name="patronus">Patrono do membro da casa</string>
    <string name="ancestry">Ancestral do membro da casa</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="try_again">Algo de errado aconteceu, por favor tente novamente</string>
    <string name="try_again_click">Click aqui para tentar novamente</string>
    <string name="mensagem_de_erro">Mensagem de erro</string>

</resources>