<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:orientation="horizontal"
    android:background="#191919"
    android:maxHeight="220dp"
    android:paddingBottom="12dp"
    android:paddingHorizontal="30dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_favorite"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:screenReaderFocusable="true"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_nameMembrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/membrerName"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_nameAbrevietedFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_patronus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="false"
            android:padding="4dp"
            android:text="@string/patronus"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_priceFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nameFavorite" />

        <TextView
            android:id="@+id/tv_ancestry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="false"
            android:padding="4dp"
            android:text="@string/ancestry"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_patronus" />

        <ImageView
            android:id="@+id/imageMembrer"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:contentDescription="Imagem do perfil do membro"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <ImageView
        android:id="@+id/simbolHouse"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top"
        android:layout_marginStart="-140dp"
        android:layout_marginBottom="-190dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        android:contentDescription="@string/simbolo_favorito"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="top"
        android:layout_marginStart="-60dp"
        android:layout_marginBottom="-80dp"
        android:contentDescription="@string/simbolo_favorito"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:srcCompat="@drawable/iconstar" />

</androidx.constraintlayout.widget.ConstraintLayout>